# linreg

./: HReg.cabal  README.md  TimeTest  ester.hs  input  linreg.cabal  package.yaml
fortran/: data  main.f90  project_file.md
fortran/doc/: index.html  search.html
fortran/doc/lists/: modules.html  procedures.html
fortran/doc/module/: allroutines.html
fortran/doc/proc/: calcab.html  calcmeanslope.html  calcsums.html  calcvariance.html  convertkappa.html  deallocall.html  parseinput.html  printresults.html
fortran/doc/program/: main.html
fortran/doc/sourcefile/: main.f90.html
fortran/doc/src/: main.f90
fortran/doc/tipuesearch/: tipuesearch_content.js
src/app/: HReg.hs  linreg.hs
src/lib/HReg/: Numeric.hs  Parser.hs  Types.hs
src/lib/Linreg/: Numeric.hs  Parser.hs  Types.hs
