name:                HReg
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ptrab/linreg
license:             GPL-3
license-file:        LICENSE
author:              Philipp Traber
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Numeric
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable HReg
  hs-source-dirs:      src/app
  main-is:             HReg.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

library
  hs-source-dirs:      src/lib
  build-depends:       base >=4.7 && <5,
                       attoparsec >=0.13.1.0,
                       text >=1.2.2.0,
                       time >=1.6.0.0,
                       microlens-platform >= 0.3.9.0
  exposed-modules:     HReg.Numeric,
                       HReg.Types,
                       HReg.Parser
  default-language:    Haskell2010
